trunk/Archive2/0f/8dcd7519f3609b/output
main.cpp: In instantiation of ‘constexpr auto f(const std::initializer_list<_Tp>&) [with T = int]’:
main.cpp:10:13:   required from here
main.cpp:6:74: error: ‘x’ is not a constant expression
 constexpr auto f(const std::initializer_list<T>& x) { return A<x.size()>(); }
                                                                          ^
main.cpp:6:74: note: in template argument for type ‘int’ 
